[package]
name = "tokio-tungstenite-keepalive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.24"
once_cell = "1.15.0"
parking_lot = "0.12.1"
pin-project = "1.0.12"
tokio-tungstenite = "0.17.2"
tokio = { version = "1.21.2", features = ["rt", "sync"] }
